--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,37 @@
 .App {
-  text-align: center;
+ display: flex;
+ justify-content: center;
+ 
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#pointed-rectangle {
+    height: 60px;
+    width: 150px;
+    font-size: 40px;
+    text-align: center;
+    background: red;
+    color: white;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.corner {
+    width: 100px;
+    background-color:red;
+    margin: 10px;
+    position: relative;
 }
-
-.App-link {
-  color: #61dafb;
+.corner:after, .corner:before {
+    content: "";
+    position: absolute;
+    left: 100%;
+    width: 40px;
+    height: 50%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.corner:before {
+    top: 0px;
+    background: linear-gradient(to top right, red 50%, transparent 51%);
+}
+.corner:after {
+    bottom: 0px;
+    background: linear-gradient(to bottom right, red 50%, transparent 51%);
 }
